--- a/Application/package.json
+++ b/Application/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.6",
-    "opn": "^6.0.0"
+    "opn": "^6.0.0",
+    "serialize": "^0.1.3"
   }
 }
