--- a/Application/package.json
+++ b/Application/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "handlebars": "^4.7.6",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.4.17",
     "nodemon": "^2.0.6",
     "opn": "^6.0.0",
     "pdfkit": "^0.11.0",
